--- a/ProjectArse/Properties/Resources.resx
+++ b/ProjectArse/Properties/Resources.resx
@@ -118,85 +118,121 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Geschiedenishover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Geschiedenishover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Geschiedenisklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Geschiedenisklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Geschiedenisnormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Geschiedenisnormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Handmatighover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Handmatighover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Handmatigklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Handmatigklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Handmatignormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Handmatignormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nietverbondenhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nietverbondenhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nietverbondenklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nietverbondenklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Nietverbondennormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Nietverbondennormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Openhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Openhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Openklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Openklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Opennormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Opennormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Starthover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Starthover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Startklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Startklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Terugklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Terugklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Startnormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Startnormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Statistiekhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Statistiekhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Statistiekklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Statistiekklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Statistieknormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Statistieknormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Stophover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Stophover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Stopklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Stopklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Stopnormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Stopnormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Terughover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Terughover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Terugklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Terugklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Terugnormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Terugnormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Geschiedenishover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Geschiedenishover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Verbondenhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Verbondenhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Verbondenklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Verbondenklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="signaalOne" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\one.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Verbondennormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Verbondennormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Verbondenklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Verbondenklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Stopnormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Stopnormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Terugnormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Terugnormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Statistiekklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Statistiekklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Opennormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Opennormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nietverbondennormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nietverbondennormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Statistiekhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Statistiekhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Handmatigklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Handmatigklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="signaalThree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\three.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Geschiedenisnormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Geschiedenisnormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nietverbondenklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nietverbondenklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="signaalTwo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\two.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Starthover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Starthover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Stopklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Stopklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Stophover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Stophover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Openhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Openhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Handmatighover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Handmatighover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Openklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Openklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Terughover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Terughover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Handmatignormaal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Handmatignormaal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Startklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Startklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Nietverbondenhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Nietverbondenhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Geschiedenisklik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Geschiedenisklik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="one" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\one1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="two" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\two1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="three" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\three1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EV3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EV3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Mapping1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Mapping1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Mapping2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Mapping2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Mapping3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Mapping3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Mapping4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Mapping4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Mapping5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Mapping5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
